# atopile

./: .gitignore  .gitlab-ci.yml  404.html  Dockerfile  README.md  index.html  package-lock.json  package.json  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
blog/: index.html
blog/archive/2024/: index.html
blog/category/about-us/: index.html
blog/category/future/: index.html
blog/category/release/: index.html
building/: index.html
ci/: index.html
class/: index.html
config/: index.html
connect/: index.html
data/: sandbox1_resistors.py
development/: index.html
doc-strings/: index.html
dockerfiles/: Dockerfile.dev  README.md
docs/: index.md  tutorial.md
examples/: sandbox0-i2c.ato
first_project/: index.html
getting-started/: index.html
git/: index.html
how-to/: index.html
import/: index.html
install/: index.html
kicad/: index.html
kicad_plugin/: __init__.py  ato_kicad.py
maths/: index.html
roadmap/: index.html
sandbox/: 555.ato  datamodel1.py  datamodel2.py  dot_link.html  dummy.ato  equations.py  equations_sandbox.ipynb  graphs.py  model2.py  model3.py  sandbox.py  sandbox_traceback.py  target_sandbox.py  test.ato  test_compile2.py  test_dm1.py  test_parser2.py  tims_sandbox.py  tolerances.py  tree_vis.py
sandbox/language-development/: connectedness.ato  equations.ato  examples-matt.ato  inheritance.ato  keywords.ato  language-spec-matt.ato  ldo.ato  typing.ato  vdiv.ato
spin/: index.html
src/atopile/: Basic_Parts.csv  bom.py  bom_parse.py  components.py  deps.py  equations.py  errors.py  front_end.py  instance_methods.py  layout_reuse.ipynb  layout_reuse.py  model.py  netlist.py  project_path.kicad_pcb  rotated.kicad_pcb  utils.py
src/atopile/asset_manager/: easyeda2ato.py
src/atopile/ato_parser/: ast.py  generic.py  pin.py  test.py  test_generic.py  test_pin.py
src/atopile/auto_router/: import numpy as np.py  old.py  phi_flow_test.ipynb  router.py
src/atopile/cli/: build.py  cli.py  common.py  create.py  inspect.py  install.py  layout.py  meta.py  netlistsvg.py  view.py
src/atopile/data/: resistor.py  starter_graph.py
src/atopile/dev/: dm1_vis.py  parse.py
src/viewer/: ato_element.js  render.js  utils.js
swoop/: index.html
tests/: conftest.py  test_deps.py  test_language.py  test_types.py  test_utils_parse.py  utils.py
tests/dev/: test_dm1_vis.py
tests/model2/: test_datamodel1_dizzy.py  test_datamodel2_name_resolution.py  test_datamodel2_scoop.py
tests/visualiser/: test_render.py
types/: index.html
view/: index.html
(+65 files in other folders)
