[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "atopile"
description = "A toolchain bringing the best of software development to the real-world!"
readme = "README.md"
requires-python = ">=3.11"
license = ""
authors = [
    { name = "Matthew Wildoer", email = "matt@atopile.io" },
    { name = "Timothee Peter", email = "tim@atopile.io" },
    { name = "Narayan Powderly", email = "narayan@atopile.io" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Typing :: Typed",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "attrs",
    "igraph",
    "fastapi",
    "schema",
    "uvicorn[standard]",
    "click",
    "watchfiles",
    "jinja2",
    "antlr4-python3-runtime==4.13.0",
    "ruamel.yaml",
    "semver",
    "rich",
    "gitpython",
    "easyeda2kicad",
    "pytest",
    "pytest-html",
    "pytest-datafiles",
    "pytest-asyncio",
    "ruff",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-drawio-file >= 1.5.2"
]
dynamic = ["version"]

[project.urls]
Homepage = "http://gitlab.atopile.io/atopile/atopile"

[project.scripts]
ato = "atopile.cli.cli:cli"

[tool.hatch.version]
source = "vcs"

[tool.isort]
profile = "black"
known_third_party = []

# [tool.mypy]
# strict = true
# TODO: you made it roughly to here
# [[tool.mypy.overrides]]
# module = "fastapi.concurrency"
# warn_unused_ignores = false
# ignore_missing_imports = true

# [[tool.mypy.overrides]]
# module = "fastapi.tests.*"
# ignore_missing_imports = true
# check_untyped_defs = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--html=artifacts/test-report.html",
    "--self-contained-html",
]

[tool.ruff]
exclude = [
    "src/atopile/parser/AtopileLexer.py",
    "src/atopile/parser/AtopileLexerBase.py",
    "src/atopile/parser/AtopileParser.py",
    "src/atopile/parser/AtopileParserBase.py",
    "src/atopile/parser/AtopileParserListener.py",
    "src/atopile/parser/AtopileParserVisitor.py",
]

ignore = [
    "E501",  # line too long (ignore for the minute)
    "C901",  # too complex
]
